Add support for TOSCA simple profile version 1.3
Co-authored-by: Lukas Harzenetter <lharzenetter@gmx.de>
Co-authored-by: Ghareeb Falazi <ghareeb.falazi@hotmail.com>
Co-authored-by: Dominik Voigt <dominik.ingo.voigt@gmail.com>
Co-authored-by: Björn Müller <bjoern.mueller@kanu-baerchen.de>
Co-authored-by: Johannes Hepp <mail@johanneshepp.de>
Co-authored-by: Felix Burk <felix.burk@googlemail.com>
Co-authored-by: Vladimir Yussupov <v.yussupov@gmail.com>

Signed-off-by: Ghareeb Falazi <ghareeb.falazi@hotmail.com>
Signed-off-by: Dominik Voigt <dominik.ingo.voigt@gmail.com>
Signed-off-by: Björn Müller <bjoern.mueller@kanu-baerchen.de>
Signed-off-by: Johannes Hepp <mail@johanneshepp.de>
Signed-off-by: Felix Burk <felix.burk@googlemail.com>
Signed-off-by: Vladimir Yussupov <v.yussupov@gmail.com>